# teacher-pod

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md
.github/workflow/: gh-page.yml
.github/workflows/: main.yml
assets/dioxus/: teacher-pod.js  teacher-pod_bg.wasm
client/: Cargo.toml  Dioxus.toml  index.html
client/public/assets/: app.css
client/src/: main.rs  mode.rs
client/src/components/: card.rs  form.rs  list.rs  mod.rs  modal.rs  navbar.rs
client/src/data/: account.rs  mod.rs  model.rs  request.rs
client/src/hooks/: mod.rs
client/src/pages/: content.rs  discover.rs  error.rs  login.rs  mod.rs  search.rs  topic.rs  user.rs
docs/: index.html
docs/assets/dioxus/: teacher-pod.js  teacher-pod_bg.wasm
models/: Cargo.toml
models/src/: account.rs  data.rs  lib.rs  podcast.rs
script/: audio.js
server/: .env  Cargo.toml  database.sql
server/src/: auth.rs  db.rs  error.rs  listennotes.rs  main.rs  task.rs
server/src/api/: account.rs  contents.rs  favorites.rs  mod.rs  podcast.rs  search.rs  topics.rs  user.rs  users.rs
server/src/model/: auth.rs  config.rs  contents.rs  mod.rs  podcasts.rs  state.rs  topics.rs  user.rs  users.rs
server/src/models/: account.rs  auth.rs  data.rs  mod.rs  podcast.rs
