[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "fermi", "router"] }
web-sys = { version = "0.3.57", features = ["Storage"] }
js-sys = "0.3.57"
dioxus-heroicons = "0.1.4"
anyhow = "1.0.57"
chrono = "0.4"
reqwasm = "0.5.0"
url = "2.2.2"