[package]
name = "tp_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dioxus = { version = "0.2.4", features = ["web", "fermi", "router"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "fermi", "router", "hot-reload"] }
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3.57", features = ["Storage"] }
js-sys = "0.3.57"
gloo = "0.8.0"
log = "0.4.6"
wasm-logger = "0.2.0"
dioxus-free-icons = "0.1.1"
dioxus-toast = { version = "0.1.5", default-features = false, features = ["web"] }
anyhow = "1.0.57"
chrono = "0.4"
url = "2.2.2"
serde_json = "1.0"

tp_models = { path = "../models", default-features = false, features = ["client"] }