[package]
name = "tp_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono =  { version = "0.4", features = ["serde"] }

sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" ], optional = true }

[features]
default = ["server"]
server = ["sqlx"]
client = []