[package]
name = "tp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
salvo = { version = "0.24", features = ["cors"] }
once_cell = "1.12.0"

sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"] }

dotenv = "0.15.0"
chrono =  { version = "0.4.15", features = ["serde"] }

log = "0.4.17"
fern = "0.6.1"

md5 = "0.7.0"
fastrand = "1.7.0"
jsonwebtoken = "8"

podcast-api = "^1.0.1"

tp_models = { path = "../models", features = ["server"] }